# idid-cli

./: .gitignore  README.md  pyproject.toml
samples/: daily-email.py
src/idid/: __init__.py  __main__.py  cli.py  entry.py  text.py  tsv.py
tests/: __init__.py  test_cli.py  test_main.py  test_text.py  test_tsv.py
tests/data/: idid.tsv
